# whisper.cpp

./: CMakeUserPresets.json
.github/workflows/: bindings-go.yml  bindings-ruby.yml  build.yml  docker.yml  examples-wasm.yml  examples.yml
examples/WhisperSpotlight/: GlobalHotkey.swift  ModelManager.swift  OverlayView.swift  Package.swift  Recorder.swift  WhisperSpotlightApp.swift
examples/bench.wasm/: index-tmpl.html
examples/command.wasm/: index-tmpl.html
examples/mcp/: CMakeLists.txt  README.md  mcp-client.cpp  mcp-client.hpp  mcp-demo.cpp  mcp-handler.cpp  mcp-handler.hpp  mcp-message-handler.hpp  mcp-server.cpp  mcp-transport.hpp  stdio-client.cpp  stdio-client.hpp  stdio-transport.cpp  stdio-transport.hpp  whisper-mcp-handler.cpp  whisper-mcp-handler.hpp
examples/parakeet-cli/: parakeet-cli.cpp
examples/stream.wasm/: index-tmpl.html
examples/whisper.swiftui/whisper.swiftui.demo/Models/: WhisperState.swift
examples/whisper.wasm/: index-tmpl.html
include/: whisper.h
models/: convert-solero-vad-to-ggml.py
src/: whisper.cpp
tests/: CMakeLists.txt  test-mcp-handler.cpp
tests/librispeech-parakeet/: .gitignore  README.md  run_eval.py
